Fixed images overflowing margins

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ h1 {
     font-size: 5em;
     text-align: center;
     margin-bottom: 25px;
-    margin-right: 0em;
+    margin-right: 1em;
 }
 
 h3 {
